# pest_detection-in-water

./: .gitignore  CMakeLists.txt  README.md  convert_to_onnx.py  debug_model.py  fix_frog_data.py  live_detect.py  main.cpp  merge_pests.py  prepare_dataset.py  run_full_update.py  setup_full_dataset.py  train.py  train_cpu.py  verify_log.txt  verify_onnx.py
